--- a/style.css
+++ b/style.css
@@ -2,4 +2,24 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+
+nav a {
+  background: grey;
+  padding: 0px 10px;
+}
+
+#featured-property div {
+  width: 800px;
+}
+
+#details {
+  display: block;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  background: red;
 }
